<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="Home" />
        <item
            android:id="@+id/nav_study_plans"
            android:icon="@drawable/plan"
            android:title="@string/study_plans" />
        <item
            android:id="@+id/nav_progress"
            android:icon="@drawable/progress"
            android:title="@string/progress_tracker" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/calendar"
            android:title="@string/calendar" />
    </group>

    <item android:title="@string/account">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/profile"
                android:title="@string/profile" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/settings"
                android:title="@string/settings" />
        </menu>
    </item>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/help"
                android:title="@string/help_amp_support" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/logout"
                android:title="@string/log_out" />
        </menu>
    </item>
</menu>