<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="16dp"
    android:id="@+id/main"
    tools:context=".CreatePlan">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_gradient"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <!-- Top App Bar (Logo + App Name + Profile Icon) -->
        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/app_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo" />

        <ImageView
            android:id="@+id/hamburgerMenuIcon"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_marginStart="328dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/open_navigation_menu"
            android:src="@drawable/menu"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/appNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/smart_study"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/logoImageView"
            app:layout_constraintTop_toTopOf="@id/logoImageView" />

        <EditText
            android:id="@+id/et_planTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:background="@drawable/edittext_bg"
            android:hint="@string/enter_plan_title"
            android:padding="12dp"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <EditText
            android:id="@+id/et_planDescription"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:background="@drawable/edittext_bg"
            android:gravity="top|start"
            android:hint="@string/enter_description"
            android:inputType="textMultiLine"
            android:padding="12dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <Button
            android:id="@+id/btn_startDate"
            android:layout_width="162dp"
            android:layout_height="55dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="#7C610E"
            android:minHeight="56dp"
            android:padding="12dp"
            android:text="@string/select_start_date"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_planDescription" />

        <Button
            android:id="@+id/btn_endDate"
            android:layout_width="166dp"
            android:layout_height="58dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="#7C610E"
            android:minHeight="56dp"
            android:padding="12dp"
            android:text="@string/select_end_date"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toEndOf="@id/btn_startDate"
            app:layout_constraintTop_toBottomOf="@+id/et_planDescription" />

        <Button
            android:id="@+id/btn_savePlan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="#4CAF50"
            android:text="@string/save_plan"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_startDate" />

        <Button
            android:id="@+id/btn_cancelPlan"
            android:layout_width="372dp"
            android:layout_height="0dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="#F44336"
            android:text="@string/cancel"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_savePlan" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/add_plan"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/plan_title"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/description"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_planTitle" />

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_nav"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingVertical="8dp">

                <ImageView
                    android:id="@+id/imageHome"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/home" />

                <ImageView
                    android:id="@+id/imageCalendar"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/plan" />

                <ImageView
                    android:id="@+id/imageAdd"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/progress" />

                <ImageView
                    android:id="@+id/imageProfile"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/settings" />

            </LinearLayout>
        </com.google.android.material.bottomnavigation.BottomNavigationView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/sidenav"
        android:background="#FFFFFF"
        android:fitsSystemWindows="true"/>

</androidx.drawerlayout.widget.DrawerLayout>
